syntax = "proto3";

package proto;

option go_package = "github.com/Julia-ivv/info-keeper.git/internal/proto";

message UserTextRecord {
  bytes prompt = 1;
  bytes data = 2;
  bytes note = 3;
  string time_stamp = 4;
}